fixed example pictures on about page not scaling on smaller screens

--- a/src/components/Atoms/Pictures/AboutPhotos/aboutImg1.css
+++ b/src/components/Atoms/Pictures/AboutPhotos/aboutImg1.css
@@ -2,3 +2,9 @@
     height: 467px;
     margin: 2.5% 0 2.5% 0;
 }
+
+@media screen and (max-width: 600px) {
+    .aboutImg1 {
+        height: 300px;
+    }
+}
